--- a/CS/BlazorApp_SpreadsheetAPI/Pages/Index.razor
+++ b/CS/BlazorApp_SpreadsheetAPI/Pages/Index.razor
@@ -28,7 +28,7 @@
 
             <DxFormLayoutItem Caption="Period in Years:" ColSpanMd="5">
                 <Template>
-                    <DxSpinEdit @bind-Value="PeriodInDays"
+                    <DxSpinEdit @bind-Value="PeriodInYears"
                                 Increment="1"
                                 MinValue="1"
                                 MaxValue="100" />
@@ -83,7 +83,7 @@
         get => loanAmount;
         set { loanAmount = value; UpdateValue(); }
     }
-    int PeriodInDays
+    int PeriodInYears
     {
         get => periodInYears;
         set { periodInYears = value; UpdateValue(); }
