update theme application

--- a/CS/BlazorApp_SpreadsheetDocumentAPI/Pages/_Layout.cshtml
+++ b/CS/BlazorApp_SpreadsheetDocumentAPI/Pages/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorApp_SpreadsheetDocumentAPI.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/blazing-berry/bootstrap.min.css" />
-    <link href="_content/DevExpress.Blazor/dx-blazor.css" rel="stylesheet" />
+    <link href="_content/DevExpress.Blazor.Themes/blazing-berry.bs4.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
